<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/textView_title_name"
        android:textColor="#EC171D"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_number1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/editText_hint"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edit_number2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/editText1_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="5"
        tools:ignore="LabelFor" />


    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="30dp"
        android:text="@string/button1_reset_name"
        android:textAllCaps="false"
        tools:ignore="RtlHardcoded" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/plus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button2_plus_name"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/minus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/button3_minus_name"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/multiply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button4_multiply_name"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/divine_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/button5_divine_name"
            android:textAllCaps="false"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textView_result_name"
            android:textColor="#EC171D"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text=""
            android:textColor="#EC171D"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

</LinearLayout>